--- a/index-style2.html
+++ b/index-style2.html
@@ -23,7 +23,7 @@
 		
         <link rel="stylesheet" href="css/main.css">
 
-		<link rel="stylesheet" href="css/colorscheme-0.css">
+		<link rel="stylesheet" href="css/colorscheme-1.css">
 		
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:100,200,300,400,700' rel='stylesheet' type='text/css'> 
 
@@ -62,7 +62,8 @@
 	</nav>
 
 	<!--main body-->
-	<section id="head">	
+	<section id="head">
+		<!--style 1-->		
 		<div class="container">
 			<div class="row">
 				<div class="hero" data-start="top:0px;opacity:1" data-top-bottom="top:500px;opacity:0">
@@ -87,7 +88,7 @@
 					</div>
 				</div>
 			</div>
-		</div> 
+		</div>		
 		<div id="slides">
 			<div class="slides-container">
 				<img src="img/bg-head-1.jpg" alt="" />
@@ -1067,7 +1068,7 @@
 				</div>
 				<div class="col-sm-6 col-sm-offset-3 animated" data-animation-delay="300" data-animation="fadeInLeft">
 					<h2>John Slamr </h2>
-					<address>						
+					<address>
 						795 Folsom Ave, Suite 600
 						<br>
 						San Francisco, CA 94107
